# TracX

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Config.toml  Gait Markerless 2.settings_new.xml  LICENSE  Pose2SimP.py  Pose2Sim_with_2d.py  README.md  build.sh  demo_dectector.py  demo_lightweight_dectector.py  imgui.ini  install.sh  main.py  nimble.py  onnx_run.py  requirements-extra.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  test.py  test_integration.py
.\experiments/Experiment_2024-09-27_15-13-56/: IK_Setup_Pose2Sim_Halpe26.xml  Scaling_Setup_Pose2Sim_Halpe26.xml
OpenSim/: Model_Pose2Sim_Halpe26.osim
Pose2Sim/: common.py  kinematics.py  personAssociation.py  poseEstimation.py  synchronization.py  triangulation.py
Sports2D/: Sports2D.py  process.py
TracX/: TracX.py  calibrate.py  constants.py  kinematics.py  rendering.py  skeletons.py  streaming.py  studio.py  utils.py
TracX/core/: analyze2d.py  (+5 more)
TracX_experimental/: blurPart.py  camera_generate_QCA_from_XML.py  create_trc_for_halpe26_npy.py  jsonMMPOSE_CMU.py  load_osim.py  onnx_run.py  personAssociation.py  theia_to_pose2sim.py  trc_plot.py  triangulate2.py
TracX_manual/: calibration.py
TracX_rtmlib/: __init__.py
build_utils/: build.sh
cli/: theia_to_pose2sim.py  visualize_motion.py
docs/: calibration.md  motion.md
mocap/: TracX.py  app.py  constants.py  streaming.py  studio.py  utils.py
mocap-manual/: calibration.py  poseEstimation.py  simulation.py  triangulate.py
mocap.egg-info/: PKG-INFO
output/: scaled_model.osim
postprocess/: HandLike2DFitting.py
tests/: test_integration.py
ui/: studio.py
util/: OpenSim_create.py  TheiaToTrcOpenSim.py  affineTransform.py  blurPart.py  camera_generate_QCA_from_XML.py  create_trc_for_halpe26_npy.py  jsonMMPOSE_CMU.py  rotate2dBack.py  rotator.py  trc_plot.py  vis_keypoints_2d.py  vis_theia_json.py  vis_trc.py
(+318 files in other folders)
