[metadata]
name = TracX
version = 0.1.0
author = Saif Khan
author_email = saifkhichi96@gmail.com
description = Perform 2D and 3D markerless kinematic analysis from single camera or multiple calibrated views.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/mindgarage-saif/TracX
keywords = markerless, kinematics, OpenPose, OpenSim, 3D human pose, 2D human pose, biomechanics
license = BSD 3-Clause License
license_files = LICENSE
platform = any
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Modeling
project_urls =
    Bug Tracker = https://github.com/mindgarage-saif/TracX/issues

[options]
zip_safe = False
python_requires = >=3.9, <=3.12
install_requires =
    anytree
    colorlog
    c3d
    easydict
    filterpy
    imageio_ffmpeg
    ipython
    matplotlib
    numpy>=1.19
    lxml==4.9.4
    mpl_interactions
    Pillow~=10.4.0
    # onnxruntime
    PyQt6
    pandas>=1.5
    rtmlib
    scipy
    statsmodels
    tensorflow
    # torch
    toml
    tqdm
    openvino
    opencv-python-headless
    qt-material==2.14
    websockets
packages = find:

[options.entry_points]
console_scripts =
    TracX = TracX.studio:main
    TracX-2D = Sports2D.Sports2D:main

[options.package_data]
* = OpenSim_Setup/**, Assets/**/*
